hphp/test/slow/autoload/autoload_path_to_symbols.php.expectf
Fatal error: Uncaught exception 'InvalidOperationException' with message 'Only available if using native autoloader' in %s/test/slow/autoload/autoload_path_to_symbols.php:13
Stack trace:
%A
